--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     links:
       - mongodb
   mongo:
-    container_name: mongo
-    image: mongo
+    image: "mongo"
     ports:
       - "27017:27017"
+    volumes:
+      - mongodata:/db
